--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,6 +100,7 @@ LastExecutedLaunchName=ANDREW
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -141,6 +142,7 @@ LastLevel=/Game/Map/SkillBox
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Constructuion/Cube.Cube
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -289,6 +291,53 @@ GeomModifier_Pen.Settings=True
 Actor.Rendering=True
 Actor.Collision=True
 Actor.Input=True
+Cube_C.Tick=True
+Cube_C.Replication=True
+Cube_C.Rendering=True
+Cube_C.Collision=True
+Cube_C.Actor=True
+Cube_C.Input=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+Cube_C.TransformCommon=True
+RotatingMovementComponent.Variable=True
+RotatingMovementComponent.Sockets=True
+RotatingMovementComponent.RotatingComponent=True
+RotatingMovementComponent.PlanarMovement=True
+RotatingMovementComponent.MovementComponent=True
+RotatingMovementComponent.ComponentTick=True
+RotatingMovementComponent.Tags=True
+RotatingMovementComponent.ComponentReplication=True
+RotatingMovementComponent.Activation=True
+RotatingMovementComponent.Cooking=True
+RotatingMovementComponent.Events=True
+Double_Cube_C.Tick=True
+Double_Cube_C.Replication=True
+Double_Cube_C.Rendering=True
+Double_Cube_C.Collision=True
+Double_Cube_C.Actor=True
+Double_Cube_C.Input=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+Double_Cube_C.TransformCommon=True
+Cube_Ball_C.Tick=True
+Cube_Ball_C.Replication=True
+Cube_Ball_C.Rendering=True
+Cube_Ball_C.Collision=True
+Cube_Ball_C.Actor=True
+Cube_Ball_C.Input=True
+Cube_Ball_C.TransformCommon=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -309,7 +358,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Map
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -329,6 +378,9 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Constructuion/Cube_Ball.Cube_Ball;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Double_Cube.Double_Cube;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Cube.Cube;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1255,10 +1307,13 @@ HierarchicalLODUtilities.TimeStamp=2024.01.30-18.29.49
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Map/SkillBox
-MRUItem1=/Game/Map/SkillBox_2
-MRUItem2=/Game/SkillBox_2
-MRUItem3=/Game/SkillBox
+MRUItem0=/Game/Blueprints/Constructuion/Cube_Ball
+MRUItem1=/Game/Blueprints/Constructuion/Double_Cube
+MRUItem2=/Game/Blueprints/Constructuion/Cube
+MRUItem3=/Game/Map/SkillBox
+MRUItem4=/Game/Map/SkillBox_2
+MRUItem5=/Game/SkillBox_2
+MRUItem6=/Game/SkillBox
 
 [AssetEditorToolkitTabLocation]
 /Game/SkillBox_BuiltData.SkillBox_BuiltData=1
