--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -141,8 +141,7 @@ OnlyBuildVisibility=False
 LastLevel=/Game/Map/SkillBox
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Constructuion/Cube.Cube
+CleanShutdown=True
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -358,7 +357,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Constructuion
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -378,8 +377,8 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Constructuion/Cube_Ball.Cube_Ball;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Double_Cube.Double_Cube;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Cube_Ball.Cube_Ball;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Cube.Cube;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -1305,16 +1304,54 @@ MovieSceneCapture.TimeStamp=2024.01.30-18.29.51
 MovieSceneCapture.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.01.30-18.29.49
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2024.01.30-18.29.45
+BlueprintGraph.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Constructuion/Cube_Ball
-MRUItem1=/Game/Blueprints/Constructuion/Double_Cube
-MRUItem2=/Game/Blueprints/Constructuion/Cube
-MRUItem3=/Game/Map/SkillBox
+MRUItem0=/Game/Map/SkillBox
+MRUItem1=/Game/Blueprints/Constructuion/Cube_Ball
+MRUItem2=/Game/Blueprints/Constructuion/Double_Cube
+MRUItem3=/Game/Blueprints/Constructuion/Cube
 MRUItem4=/Game/Map/SkillBox_2
 MRUItem5=/Game/SkillBox_2
 MRUItem6=/Game/SkillBox
 
 [AssetEditorToolkitTabLocation]
 /Game/SkillBox_BuiltData.SkillBox_BuiltData=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
