--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=320,Y=160)
+NewWindowPosition=(X=338,Y=687)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,7 +100,7 @@ LastExecutedLaunchName=ANDREW
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=320,Y=160)
+MultipleInstancePositions=(X=338,Y=687)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -142,6 +142,7 @@ LastLevel=/Game/Map/SkillBox
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Constructuion/Light_Source.Light_Source
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -337,6 +338,91 @@ Cube_Ball_C.Collision=True
 Cube_Ball_C.Actor=True
 Cube_Ball_C.Input=True
 Cube_Ball_C.TransformCommon=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Collision=True
+NewBlueprint_C.Actor=True
+NewBlueprint_C.Input=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.ComponentTick=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.RayTracing=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+Light_Source_C.TransformCommon=True
+Light_Source_C.Rendering=True
+Light_Source_C.Replication=True
+Light_Source_C.Collision=True
+Light_Source_C.Input=True
+Light_Source_C.Actor=True
+RectLightComponent.Variable=True
+RectLightComponent.TransformCommon=True
+RectLightComponent.Sockets=True
+RectLightComponent.Light=True
+RectLightComponent.Rendering=True
+RectLightComponent.Lightmass=True
+RectLightComponent.Performance=True
+RectLightComponent.ComponentTick=True
+RectLightComponent.LightFunction=True
+RectLightComponent.DistanceFieldShadows=True
+RectLightComponent.RayTracing=True
+RectLightComponent.Light Profiles=True
+RectLightComponent.Tags=True
+RectLightComponent.ComponentReplication=True
+RectLightComponent.Cooking=True
+RectLightComponent.Events=True
+MeshMergingSettingsObject.MeshSettings=True
+MeshMergingSettingsObject.MaterialSettings=True
+MeshMergingSettingsObject.LandscapeCulling=True
+SpotLightComponent.Variable=True
+SpotLightComponent.TransformCommon=True
+SpotLightComponent.Sockets=True
+SpotLightComponent.Light=True
+SpotLightComponent.Rendering=True
+SpotLightComponent.Lightmass=True
+SpotLightComponent.Performance=True
+SpotLightComponent.ComponentTick=True
+SpotLightComponent.LightFunction=True
+SpotLightComponent.DistanceFieldShadows=True
+SpotLightComponent.RayTracing=True
+SpotLightComponent.Light Profiles=True
+SpotLightComponent.Tags=True
+SpotLightComponent.ComponentReplication=True
+SpotLightComponent.Cooking=True
+SpotLightComponent.Events=True
+Light_Source_C.LOD=False
+Light_Source_C.Cooking=False
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+Light_Source_C.Default=True
+Light_Source_C.Tick=True
+K2Node_CallParentFunction.Graph=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_SwitchInteger.PinOptions=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -377,12 +463,13 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Constructuion/Light_Source.Light_Source;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Constructuion/Double_Cube.Double_Cube;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Cube_Ball.Cube_Ball;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Cube.Cube;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 
@@ -1306,15 +1393,20 @@ HierarchicalLODUtilities.TimeStamp=2024.01.30-18.29.49
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2024.01.30-18.29.45
 BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2024.01.30-18.29.53
+SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Map/SkillBox
-MRUItem1=/Game/Blueprints/Constructuion/Cube_Ball
-MRUItem2=/Game/Blueprints/Constructuion/Double_Cube
-MRUItem3=/Game/Blueprints/Constructuion/Cube
-MRUItem4=/Game/Map/SkillBox_2
-MRUItem5=/Game/SkillBox_2
-MRUItem6=/Game/SkillBox
+MRUItem0=/Game/Blueprints/Constructuion/Light_Source
+MRUItem1=/Game/Map/SkillBox
+MRUItem2=/Game/Cinematics/Takes/2024-02-07/Scene_1_01
+MRUItem3=/Game/Blueprints/Constructuion/NewBlueprint
+MRUItem4=/Game/Blueprints/Constructuion/Cube_Ball
+MRUItem5=/Game/Blueprints/Constructuion/Double_Cube
+MRUItem6=/Game/Blueprints/Constructuion/Cube
+MRUItem7=/Game/Map/SkillBox_2
+MRUItem8=/Game/SkillBox_2
+MRUItem9=/Game/SkillBox
 
 [AssetEditorToolkitTabLocation]
 /Game/SkillBox_BuiltData.SkillBox_BuiltData=1
@@ -1354,4 +1446,21 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[DetailCategoriesAdvanced]
+K2Node_VariableGet.Variable=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
