--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=338,Y=687)
+NewWindowPosition=(X=270,Y=689)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -94,13 +94,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@ANDREW
 LastExecutedLaunchName=ANDREW
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=338,Y=687)
+MultipleInstancePositions=(X=270,Y=689)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -443,7 +443,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Constructuion
+ContentBrowserTab1.SelectedPaths=/Game/Map
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -475,6 +475,7 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
+DeleteVariableInUse_Warning=False
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1397,8 +1398,8 @@ SequencerWidgets.TimeStamp=2024.01.30-18.29.53
 SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Constructuion/Light_Source
-MRUItem1=/Game/Map/SkillBox
+MRUItem0=/Game/Map/SkillBox
+MRUItem1=/Game/Blueprints/Constructuion/Light_Source
 MRUItem2=/Game/Cinematics/Takes/2024-02-07/Scene_1_01
 MRUItem3=/Game/Blueprints/Constructuion/NewBlueprint
 MRUItem4=/Game/Blueprints/Constructuion/Cube_Ball
