--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=270,Y=689)
+NewWindowPosition=(X=226,Y=512)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -100,7 +100,7 @@ LastExecutedLaunchName=ANDREW
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=270,Y=689)
+MultipleInstancePositions=(X=226,Y=512)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -142,7 +142,7 @@ LastLevel=/Game/Map/SkillBox
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Constructuion/Light_Source.Light_Source
+OpenAssetsAtExit=/Game/Blueprints/Constructuion/NewBlueprint.NewBlueprint
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -423,6 +423,28 @@ K2Node_CallFunction.Graph=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
 K2Node_SwitchInteger.PinOptions=True
+NewBlueprint_C.TransformCommon=True
+NewBlueprint_C.Default=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Replication=True
+PlayerController.Input=True
+PlayerController.Actor=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Collision=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Replication=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Events=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -443,7 +465,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Map
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Constructuion
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -463,8 +485,9 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Constructuion/Light_Source.Light_Source;
+RecentlyPlaced=/Game/Blueprints/Constructuion/NewBlueprint.NewBlueprint;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Blueprints/Constructuion/Light_Source.Light_Source;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Double_Cube.Double_Cube;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Cube_Ball.Cube_Ball;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Cube.Cube;
@@ -476,6 +499,7 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
 DeleteVariableInUse_Warning=False
+ChangeVariableType_Warning=False
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -1399,9 +1423,9 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Constructuion/Light_Source
-MRUItem1=/Game/Map/SkillBox
-MRUItem2=/Game/Cinematics/Takes/2024-02-07/Scene_1_01
-MRUItem3=/Game/Blueprints/Constructuion/NewBlueprint
+MRUItem1=/Game/Blueprints/Constructuion/NewBlueprint
+MRUItem2=/Game/Map/SkillBox
+MRUItem3=/Game/Cinematics/Takes/2024-02-07/Scene_1_01
 MRUItem4=/Game/Blueprints/Constructuion/Cube_Ball
 MRUItem5=/Game/Blueprints/Constructuion/Double_Cube
 MRUItem6=/Game/Blueprints/Constructuion/Cube
@@ -1411,6 +1435,7 @@ MRUItem9=/Game/SkillBox
 
 [AssetEditorToolkitTabLocation]
 /Game/SkillBox_BuiltData.SkillBox_BuiltData=1
+/Game/Blueprints/Constructuion/Light_Source.Light_Source=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1450,6 +1475,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [DetailCategoriesAdvanced]
 K2Node_VariableGet.Variable=False
+StaticMeshComponent.Collision=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1464,4 +1490,7 @@ bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
 bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
+
+[DetailCustomWidgetExpansion]
+StaticMeshComponent=
 
