--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=226,Y=512)
+NewWindowPosition=(X=242,Y=607)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -94,13 +94,13 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=WindowsNoEditor@ANDREW
 LastExecutedLaunchName=ANDREW
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=226,Y=512)
+MultipleInstancePositions=(X=242,Y=607)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -142,7 +142,9 @@ LastLevel=/Game/Map/SkillBox
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Constructuion/NewBlueprint.NewBlueprint
+OpenAssetsAtExit=/Game/Blueprints/Constructuion/Destruction_unit/BlokeChangeMaterial.BlokeChangeMaterial
+OpenAssetsAtExit=/Game/Blueprints/Constructuion/Destruction_unit/BP_Destruction.BP_Destruction
+OpenAssetsAtExit=/Game/Blueprints/Constructuion/Destruction_unit/BP_Decrease.BP_Decrease
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -445,6 +447,111 @@ PlayerCameraManager.Input=True
 PlayerCameraManager.Actor=True
 PropertyWrapper.Events=True
 K2Node_VariableSet.Events=True
+123_C.Tick=True
+123_C.Replication=True
+123_C.Rendering=True
+123_C.Collision=True
+123_C.Actor=True
+123_C.Input=True
+BlokeDestruction_C.Tick=True
+BlokeDestruction_C.Replication=True
+BlokeDestruction_C.Rendering=True
+BlokeDestruction_C.Collision=True
+BlokeDestruction_C.Actor=True
+BlokeDestruction_C.Input=True
+Destruction_C.Tick=True
+Destruction_C.Replication=True
+Destruction_C.Rendering=True
+Destruction_C.Collision=True
+Destruction_C.Actor=True
+Destruction_C.Input=True
+BlokeDestruction_C.TransformCommon=True
+BP_Ball_C.TransformCommon=True
+BP_Ball_C.Default=True
+BP_Ball_C.Rendering=True
+BP_Ball_C.Replication=True
+BP_Ball_C.Collision=True
+BP_Ball_C.Input=True
+BP_Ball_C.Actor=True
+Destruction_C.TransformCommon=True
+BlokeDestruction_C.Default=True
+BP_Ball_C.Tick=True
+ParticleEventManager.Rendering=True
+ParticleEventManager.Replication=True
+ParticleEventManager.Collision=True
+ParticleEventManager.Input=True
+ParticleEventManager.Actor=True
+BP_Decrease_C.Tick=True
+BP_Decrease_C.Default=True
+BP_Decrease_C.Replication=True
+BP_Decrease_C.Rendering=True
+BP_Decrease_C.Collision=True
+BP_Decrease_C.Actor=True
+BP_Decrease_C.Input=True
+BlokeDecrease_C.Tick=True
+BlokeDecrease_C.Default=True
+BlokeDecrease_C.Replication=True
+BlokeDecrease_C.Rendering=True
+BlokeDecrease_C.Collision=True
+BlokeDecrease_C.Actor=True
+BlokeDecrease_C.Input=True
+BlokeDecrease_C.TransformCommon=True
+BP_Decrease_C.TransformCommon=True
+BlokeChangeMaterial_C.Tick=True
+BlokeChangeMaterial_C.Default=True
+BlokeChangeMaterial_C.Replication=True
+BlokeChangeMaterial_C.Rendering=True
+BlokeChangeMaterial_C.Collision=True
+BlokeChangeMaterial_C.Actor=True
+BlokeChangeMaterial_C.Input=True
+BP_Change_Material_C.Tick=True
+BP_Change_Material_C.Default=True
+BP_Change_Material_C.Replication=True
+BP_Change_Material_C.Rendering=True
+BP_Change_Material_C.Collision=True
+BP_Change_Material_C.Actor=True
+BP_Change_Material_C.Input=True
+BlokeChangeMaterial_C.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+BP_Destruction_C.TransformCommon=True
+BP_Destruction_C.Default=True
+BP_Destruction_C.Rendering=True
+BP_Destruction_C.Replication=True
+BP_Destruction_C.Collision=True
+BP_Destruction_C.Input=True
+BP_Destruction_C.Actor=True
+BP_Destruction_C.Tick=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -465,7 +572,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Constructuion
+ContentBrowserTab1.SelectedPaths=/Game/Map
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -483,9 +590,19 @@ GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Object=
 GeomModifier_Pen="\"Object.Settings\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Constructuion/NewBlueprint.NewBlueprint;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Destruction_unit/BlokeChangeMaterial.BlokeChangeMaterial;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Destruction_unit/BP_Decrease.BP_Decrease;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Destruction_unit/BlokeDecrease.BlokeDecrease;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Destruction_unit/BP_Destruction.BP_Destruction;
+RecentlyPlaced=/Game/Blueprints/Constructuion/Destruction_unit/BlokeDestruction.BlokeDestruction;
+RecentlyPlaced=/Game/Blueprints/Constructuion/BP_Ball.BP_Ball;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Blueprints/Constructuion/Light_Source.Light_Source;
 RecentlyPlaced=/Game/Blueprints/Constructuion/Double_Cube.Double_Cube;
@@ -502,7 +619,7 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -1420,22 +1537,40 @@ BlueprintGraph.TimeStamp=2024.01.30-18.29.45
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2024.01.30-18.29.53
 SequencerWidgets.LastCompileMethod=Unknown
+PortalProxies.TimeStamp=2024.01.30-18.29.51
+PortalProxies.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Constructuion/Light_Source
-MRUItem1=/Game/Blueprints/Constructuion/NewBlueprint
-MRUItem2=/Game/Map/SkillBox
-MRUItem3=/Game/Cinematics/Takes/2024-02-07/Scene_1_01
-MRUItem4=/Game/Blueprints/Constructuion/Cube_Ball
-MRUItem5=/Game/Blueprints/Constructuion/Double_Cube
-MRUItem6=/Game/Blueprints/Constructuion/Cube
-MRUItem7=/Game/Map/SkillBox_2
-MRUItem8=/Game/SkillBox_2
-MRUItem9=/Game/SkillBox
+MRUItem0=/Game/Blueprints/Constructuion/Destruction_unit/BP_Decrease
+MRUItem1=/Game/Blueprints/Constructuion/Destruction_unit/BP_Destruction
+MRUItem2=/Game/Blueprints/Constructuion/Destruction_unit/BlokeChangeMaterial
+MRUItem3=/Game/Map/SkillBox
+MRUItem4=/Game/Blueprints/Constructuion/Destruction_unit/BlokeDecrease
+MRUItem5=/Game/Environment/Materials/WhiteWall
+MRUItem6=/Game/Environment/Materials/RedWall
+MRUItem7=/Game/Blueprints/Constructuion/Light_Source
+MRUItem8=/Game/Blueprints/Constructuion/Destruction_unit/BP_Change_Material
+MRUItem9=/Game/Blueprints/Constructuion/BP_Ball
+MRUItem10=/Game/Blueprints/Constructuion/Destruction_unit/BlokeDestruction
+MRUItem11=/Game/Blueprints/Constructuion/Destruction_unit/Destruction
+MRUItem12=/Game/Blueprints/Constructuion/Destruction_unit/123
+MRUItem13=/Game/Blueprints/Constructuion/NewBlueprint
+MRUItem14=/Game/Cinematics/Takes/2024-02-07/Scene_1_01
+MRUItem15=/Game/Blueprints/Constructuion/Cube_Ball
+MRUItem16=/Game/Blueprints/Constructuion/Double_Cube
+MRUItem17=/Game/Blueprints/Constructuion/Cube
+MRUItem18=/Game/Map/SkillBox_2
+MRUItem19=/Game/SkillBox_2
 
 [AssetEditorToolkitTabLocation]
 /Game/SkillBox_BuiltData.SkillBox_BuiltData=1
 /Game/Blueprints/Constructuion/Light_Source.Light_Source=0
+/Game/Blueprints/Constructuion/Destruction_unit/BlokeDestruction.BlokeDestruction=0
+/Game/Blueprints/Constructuion/BP_Ball.BP_Ball=0
+/Game/Blueprints/Constructuion/Destruction_unit/BlokeDecrease.BlokeDecrease=0
+/Game/Blueprints/Constructuion/Destruction_unit/BlokeChangeMaterial.BlokeChangeMaterial=0
+/Game/Environment/Materials/RedWall.RedWall=0
+/Game/Environment/Materials/WhiteWall.WhiteWall=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1492,5 +1627,78 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 
 [DetailCustomWidgetExpansion]
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+SceneComponent=
+BP_Ball_C=StaticMeshComponent.Collision.Collision,
+BlokeDecrease_C=StaticMeshComponent.Collision.Collision,
+BlokeDestruction_C=StaticMeshComponent.Collision.Collision,
+BP_Decrease_C=
+K2Node_VariableGet=StaticMeshComponent.Collision.Collision,
+K2Node_VariableSet=StaticMeshComponent.Collision.Collision,
+BlokeChangeMaterial_C=StaticMeshComponent.Collision.Collision,
+BP_Sky_Sphere_C=StaticMeshComponent.Collision.Collision,
+BP_Destruction_C=StaticMeshComponent.Collision.Collision,
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
