--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/SkillBox.SkillBox
-EditorStartupMap=/Game/Map/SkillBox.SkillBox
+GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+EditorStartupMap=/Engine/Maps/Templates/Template_Default.Template_Default
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
