--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -139,11 +139,10 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [EditorStartup]
-LastLevel=/Game/Map/SkillBox
+LastLevel=/Engine/Maps/Templates/Template_Default
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Constructuion/Arkanoid/BP_Pawn.BP_Pawn
+CleanShutdown=True
 
 [DetailCategories]
 SphereReflectionCapture.TransformCommon=True
@@ -1196,7 +1195,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Constructuion/Arkanoid
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1289,7 +1288,7 @@ UNR=../../../../../UnrealEngineFile/SkillBox/Content/Map
 BRUSH=../../../../../UnrealEngineFile/SkillBox/Content/
 FBX=../../../../../UnrealEngineFile/SkillBox/Content/
 FBXAnim=../../../../../UnrealEngineFile/SkillBox/Content/
-GenericImport=../../../../../UnrealEngineFile/SkillBox/Content/
+GenericImport=F:/UnrealEngineFile/Bild
 GenericExport=../../../../../UnrealEngineFile/SkillBox/Content/
 GenericOpen=../../../../../UnrealEngineFile/SkillBox/Content/
 GenericSave=../../../../../UnrealEngineFile/SkillBox/Content/
@@ -2187,6 +2186,10 @@ ExternalImagePicker.TimeStamp=2024.01.30-18.29.49
 ExternalImagePicker.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2024.01.30-18.29.53
 TextureEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2024.01.30-18.29.50
+LauncherServices.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2024.01.30-18.29.53
+UATHelper.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Constructuion/Arkanoid/BP_Pawn
@@ -2404,7 +2407,7 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings.Escape,InputS
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.Escape,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForwardBackward,InputSettings.Bindings.AxisMappings.MoveLeftRight,InputSettings.Bindings.AxisMappings.Acceleration,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.Escape,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveForwardBackward,InputSettings.Bindings.AxisMappings.MoveLeftRight,InputSettings.Bindings.AxisMappings.Acceleration,
 BP_Pawn_C=StaticMeshComponent.Collision.Collision,CameraActor.PostProcess.Lens,
-CameraActor=StaticMeshComponent.Collision.Collision,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Lens|Camera,CameraActor.PostProcess.Rendering Features,
+CameraActor=StaticMeshComponent.Collision.Collision,CameraActor.PostProcess.Lens,CameraActor.PostProcess.Lens
 BrushComponent=
 BP_Bonus_C=
 MulticastInlineDelegatePropertyWrapper=StaticMeshComponent.Collision.Collision,
